<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/pooja_service"
        android:title="@string/pooja_service"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_catagory"
        />
    <item
        android:id="@+id/pooja_kit"
        android:title="@string/pooja_kit"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_service" />
    <item
        android:id="@+id/product"
        android:title="@string/product"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_wish_list" />
    <item
        android:id="@+id/my_account"
        android:title="@string/account_name"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_my_account" />
</menu>